--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <div class="row">
                         <div class="col-50">
                             <h1>Husen Telwala</h1>
-                            <h3>Sr. Front-end Developer</h3>
+                            <h3>Sr. UI Engineer</h3>
+                                
                             <p>I am Highly motivated and focused team player and having Strong Understanding of internet technologies, web semantics and related business models.</p>
                             <p>My goal is to build fast, mobile-first websites that clearly communicate with visitors.</p>
                             <p>Passionate about my work. I awarded two times <span title="Best Employee Award Husen Telwala">'Best Employee Award'</span> in two different organizations as a result of my dedication towards the work.</p>
